# hdf4

./: .clang-format  .codespellrc  .gitattributes  .gitignore  CMakeFilters.cmake  CMakeInstallation.cmake  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  COPYING  CTestConfig.cmake  ConfigureChecks.cmake  DevStu.zip.uu  INSTALL  INSTALL-4.2r0-Beta  INSTALL_CYGWIN.txt  INSTALL_WINDOWS.txt  INSTALL_old  MAKEVMS.COM  MANIFEST  Makefile.am  Makefile.dist  Makefile.in  README  README.md  README.txt  UserMacros.cmake  Win32nof.zip.uu  aclocal.m4  autogen.sh  c_flag_overrides.cmake  ci.sh  config.guess  config.sub  configure  configure.ac  configure.in  install-sh  libhdf4.settings.autotools.in  libhdf4.settings.cmake.in  (+3 more)
HDF4Examples/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  COPYING  CTestConfig.cmake  Using_CMake.txt
HDF4Examples/C/: CMakeLists.txt  Makefile.am
HDF4Examples/FORTRAN/: CMakeLists.txt
HDF4Examples/JAVA/: CMakeLists.txt
HDF4Examples/hdf/: CMakeLists.txt
HDF4Examples/mfhdf/: CMakeLists.txt
doxygen/: CMakeLists.txt  Doxyfile.in  aliases  hdf4_header.html  hdf4_navtree_hacks.js  hdf4doxy.css  hdf4doxy_layout.xml
doxygen/dox/: About.dox  GettingStarted.dox  Glossary.dox  Overview.dox  UsersGuide.dox  rm-template.dox
hdf/: CMakeLists.txt  MAKE.ALPHA  MAKE.CM5  MAKE.COM  MAKE.CONVEX  MAKE.FREEBSD  MAKE.HP9000  MAKE.I860  MAKE.IBM6000  MAKE.IRIS4  MAKE.IRIX  MAKE.LINUX  MAKE.MIPSEL  MAKE.MOTO  MAKE.NEXT  MAKE.SOLARIS  MAKE.SUN  MAKE.SUN.ANSI  MAKE.UNICOS  MAKE.VP  Makefile.Template  Makefile.am  Makefile.in  README  build.inc
hdf/examples/: AN_create_annotation.c  AN_get_annotation_info.c  AN_read_annotation.c  CMakeLists.txt  CMakeTests.cmake  GR_create_and_write_image.c  GR_get_attribute.c  GR_image_info.c  GR_modify_image.c  GR_read_chunks.c  GR_read_image.c  GR_read_palette.c  GR_set_attribute.c  GR_write_chunks.c  GR_write_palette.c  Makefile.am  Makefile.in  README  VD_create_onefield_vdatas.c  VD_create_vdatas.c  VD_get_vdata_info.c  VD_locate_vdata.c  VD_read_from_vdata.c  VD_read_mixed_vdata.c  VD_set_get_vdata_attr.c  VD_write_mixed_vdata.c  VD_write_mixed_vdata_struct.c  VD_write_to_vdata.c  VG_add_sds_to_vgroup.c  VG_create_vgroup.c  VG_get_vgroup_info.c  VG_insert_vdatas_to_vgroup.c  VG_set_get_vgroup_attr.c  VG_vgroup_contents.c  run-all-ex.sh  run-c-ex.sh
hdf/fmpool/: Makefile  Makefile.in  cdefs.h  compat.h  config.guess  config.sub  configure  configure.in  fmpconf.h  fmpio.3  fmpio.c  fmpio.h  fmpool.3  fmpool.c  fmpool.h  fmptypes.h  queue.h  test_fmpio.c  tfmpio_read.c  tfmpio_write.c
hdf/fortran/: CMakeLists.txt  CMakeTests.cmake  Makefile.am  Makefile.in  hdf_fortrandll.def
hdf/jpeg/: Makefile  Makefile.am  Makefile.in  ckconfig.c  configure.gnu  configure.in  jcapistd.c  jccoefct.c  jchuff.c  jcmainct.c  jcmarker.c  jcmaster.c  jcparam.c  jcprepct.c  jctrans.c  jdmainct.c  jdmarker.c  jmorecfg.h  jpeglib.68k-project.hqx  jpeglib.PPC-project.hqx  jpeglib.project  jpeglib.project.hqx  jquant2.c  makefile.cfg  makefile.vms
hdf/pablo/: HDFTrace.h  HDFentries.txt  Makefile.in  Pablo.doc  Pablo.ps  PabloHDF.c  PabloHDF.inc  PabloHDF_RT.c  PabloHDF_SDDF.c  PabloHDFf.c  PabloHDFff.f  ProcIDs.h  ProcMasks.h  ProcMasks.inc  ProcTrace.h  README.Pablo  depend
hdf/slib/: Makefile.in  example.c  gentest.c  rice.c  rice.h  ricehdf.h  sz_api.c  szlib.h
hdf/src/: .indent.pro  CMakeLists.txt  H4api_adpt.h  INSTALL  MAKEFS.COM  MAKENOF.COM  Makefile  Makefile.CM5  Makefile.am  Makefile.in  api_adpt.h  atom.c  atom.h  atom_priv.h  atom_private.h  bitvect.c  bitvect.h  bitvect_priv.h  bitvect_private.h  cdeflate.c  cdeflate.h  cdeflate_priv.h  cgzip.c  cgzip.h  cmextelt.cs  cnbit.c  cnbit.h  cnbit_priv.h  cnone.c  cnone.h  cnone_priv.h  constant.f  crle.c  crle.h  crle_priv.h  cskphuff.c  cskphuff.h  cskphuff_priv.h  cszip.c  cszip.h  (+225 more)
hdf/test/: CMakeLists.txt  CMakeTests.cmake  MAKE.COM  MAKENOF.COM  Mac-Makefile.tests.hqx  Makefile  Makefile.OLD  Makefile.am  Makefile.in  Makefile.old  README  SETUPTEST.COM  an.c  anfile.c  bitio.c  blocks.c  buffer.c  chunks.c  comp.c  conv.c  egchi.c  egchi.res  egfhi.f  egfhi.res  extelt.c  file.c  file1.c  file_atexit.c  file_limits.c  forsupf.c  forsupff.f  fortest.c  fortest.h  fortest.inc  fortest.sav  fortestF.f  gentest.c  hblocks.c  hextelt.c  hfile.c  (+104 more)
hdf/util/: CMakeLists.txt  CMakeTests.cmake  MAKEUTIL.COM  Makefile  Makefile.am  Makefile.in  README  README.TST  README.UTILS  SETUPUTILS.COM  decompress.c  fp2hdf.c  fp2hdf.input1  fp2hdf.mak  fp2hdf.out1  fp2hdf.out2  fp2hdf.test  fptest.c  fptestf.f  getopt.c  getopt1.c  gif.h  gif2hdf.c  gif2mem.c  gifread.c  h4cc.in  h4fc.in  h4redeploy.in  hdf24to8.c  hdf24to8.mak  hdf2gif.c  hdf2jpeg.c  hdf2jpeg.mak  hdf8to24.c  hdf8to24.mak  hdfcomp.c  hdfcomp.mak  hdfcomp.out1  hdfcomp.out1.1  hdfcomp.out1.2  (+48 more)
hdf/zlib/: MAKE.COM  Make_vms.com  Makefile  Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  descrip.mms  example.c  gzio.c  minigzip.c  trees.c  zconf.h  zlib.68k-project.hqx  zlib.PPC-project.hqx  zlib.project  zlib.project.hqx  zutil.c  zutil.h
java/: CMakeLists.txt  Makefile.am  Makefile.in
java-hdf/: COPYING  INSTALL  Makefile.in  README  RELEASE  ReadmeWindows  VERSION  configure  configure.in  win95make.bat
java-hdf/lib/: jhv.props
java-hdf/native/: Makefile.in
java-hdf/samples/: anntest.hdf  hdf-ann-ras.hdf  layers8bit.hdf  liver_ca_3D.hdf  ntcheck.hdf  readme.file  sac96274.hdf  sdsvdata.hdf  sea-ice-vdata.hdf  textfile.txt
java/examples/: CMakeLists.txt  HDF4DatasetCreate.java  HDF4FileCreate.java  HDF4GroupCreate.java  Makefile.am  Makefile.in  VDReadFromVdata.java  VDWriteToVdata.java
java/src/: CMakeLists.txt  Makefile.am  Makefile.in
java/test/: CMakeLists.txt  JUnit-interface.ert  JUnit-interface.txt  Makefile.am  Makefile.in  TestH4.java  (+11 more)
mfhdf/: CHANGES  CMakeLists.txt  COPYRIGHT  CUSTOMIZE  FAQ  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.in_orig  README  README.HDF  THANKS  aclocal.m4  config.status  configure  configure.in  macros.mk  make.com  msoft.mk
(+3675 files in other folders)
